Initial MV3 support

--- a/app/html/fragments/exportImport.html
+++ b/app/html/fragments/exportImport.html
@@ -8,8 +8,8 @@
         <ul class="dropdown-menu" role="menu">
             <li><a href="#" ng-click="export()"><span class="glyphicon glyphicon-download"></span> To File</a>
             </li>
-            <li><a href="#" ng-click="exportClipboard()"><span class="glyphicon glyphicon-export"></span> To
-                Clipboard</a></li>
+            <!-- <li><a href="#" ng-click="exportClipboard()"><span class="glyphicon glyphicon-export"></span> To
+                Clipboard</a></li> -->
         </ul>
 
     </div>
@@ -19,7 +19,7 @@
         </button>
         <ul class="dropdown-menu" role="menu">
             <li><a href="#" ng-click="import()">From File</a></li>
-            <li><a href="#" ng-click="importClipboard()">From Clipboard</a></li>
+            <!-- <li><a href="#" ng-click="importClipboard()">From Clipboard</a></li> -->
         </ul>
     </div>
 </div>
